--- a/SeatPlan/Makefile
+++ b/SeatPlan/Makefile
@@ -150,4 +150,4 @@ strategy-run: $(INPUT) strategy
 #--------------------------------------------------------------------------
 	
 clean:
-	rm -f *.o *.out *.txt subject-wise-rollno strategy report
+	rm -f *.in *.o *.out *.txt subject-wise-rollno strategy report
