--- a/BakaPlan/SeatPlan/Makefile
+++ b/BakaPlan/SeatPlan/Makefile
@@ -40,6 +40,12 @@ all: subject-wise-rollno strategy report
 #read-input-run
 
 #--------------------------------------------------------------------------
+#                           Console Targets
+#--------------------------------------------------------------------------
+
+console: subject-wise-rollno-run strategy-run report-run
+
+#--------------------------------------------------------------------------
 #                          Read Input Files
 #--------------------------------------------------------------------------
 
