--- a/BakaPlan/SeatPlan/SeatPlan/ExamDetails.in
+++ b/BakaPlan/SeatPlan/SeatPlan/ExamDetails.in
@@ -1,4 +1,4 @@
-GATE 2013
-10-2-2012(SUNDAY)
-2:00pm - 5:00pm
-ADMIN BLOCK SECOND FLOOR AND TOP FLOOR
+Examination Name
+Date
+Time (2:00pm - 5:00pm)
+Venue
