--- a/BakaPlan/SeatPlan/SeatPlan/RoomDetails.in
+++ b/BakaPlan/SeatPlan/SeatPlan/RoomDetails.in
@@ -1,21 +1,21 @@
 1
-LUC
+Centre Name
 9
-F-101 First Floor
+Room No 1
 7 3
-F-102 First Floor
+Room No 2
 6 6
-F-103 First Floor
+Room No 3
 6 4
-F-104 First Floor
+Room No 4
 6 6
-F-105 First Floor
+Room No 5
 7 6
-F-106 First Floor
+Room No 6
 7 6
-F-107 First Floor
+Room No 7
 7 6
-S-201 Top Floor
+Room No 8
 7 4
-S-202 Top Floor
+Room No 9
 7 4
