field name changed, 5th strategy added

--- a/BakaPlan/SeatPlan/Makefile
+++ b/BakaPlan/SeatPlan/Makefile
@@ -156,4 +156,4 @@ strategy-run: $(INPUT) strategy
 #--------------------------------------------------------------------------
 	
 clean:
-	rm -f *.in *.o *.out *.txt *.in subject-wise-rollno strategy report
+	rm -f *.o *.out *.txt *.in subject-wise-rollno strategy report
