demo input files

--- a/BakaPlan/SeatPlan/SeatPlan/ExamDetails.in
+++ b/BakaPlan/SeatPlan/SeatPlan/ExamDetails.in
@@ -1,4 +1,4 @@
-Examination Name
-Date
-Time (2:00pm - 5:00pm)
-Venue
+GATE 2013
+10-2-2013(SUNDAY)
+9:00am - 12:00pm
+ADMIN BLOCK SECOND FLOOR AND TOP FLOOR
