--- a/BakaPlan/SeatPlan/SeatPlan/RoomDetails.in
+++ b/BakaPlan/SeatPlan/SeatPlan/RoomDetails.in
@@ -1,21 +1,29 @@
 1
-Centre Name
-9
-Room No 1
-7 3
-Room No 2
+LUC 81711
+13
+F-101 First Floor
+7 6
+F-102 First Floor
 6 6
-Room No 3
+F-103 First Floor
 6 4
-Room No 4
+F-104 First Floor
 6 6
-Room No 5
+F-105 First Floor
 7 6
-Room No 6
+F-106 First Floor
 7 6
-Room No 7
+F-107 First Floor
 7 6
-Room No 8
+S-201 Top Floor
 7 4
-Room No 9
+S-202 Top Floor
+7 5
+S-203 Top Floor
+7 5
+S-204 Top Floor
+7 5
+S-205 Top Floor
 7 4
+S-206 Top Floor
+9 4
