--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-# ===================================================================
+# ====================================================================
 # 
 #        Filename:  Makefile
 # 
@@ -12,6 +12,27 @@
 #         License:  GNU General Public License
 #       Copyright:  Copyright (c) 2013, Great Developers
 # 
-# ===================================================================
+# ====================================================================
 
+# ====================================================================
+#   Variables for compilation of c/c++ files
+# ====================================================================
+
+CC      =   g++         # Compiler  
+CFLAG   =   -c  -g      # Compilation and debugger Flag 
+OFLAG   =   -o          # O/p Flag
+LCGICC  =   -lcgicc     # cgicc lib flag
+
+# ====================================================================
+#   Variables for header files (H_HEADER_FILE_NAME)
+# ====================================================================
+
+H_HEADER                =   header.h $(H_FILENAMES)
+H_CGICC                 =   cgicc.h
+H_HTMLTAGS              =   htmltags.h $(H_HEADER)
+H_FILENAMES             =   filenames.h 
+H_CLASSDETAILS          =   classdetails.h $(H_HTMLTAGS)
+H_INPUTFIELDNAMES       =   inputfieldsnames.h
+H_PAGELAYOUT            =   pagelayout.h
+H_READINPUTDETAILS      =   readinputdetails.h
 
