--- a/src/Makefile
+++ b/src/Makefile
@@ -102,7 +102,7 @@ O_CLASSINFO_MAIN    =   classinfo-main.o
 
 L_PAGELAYOUT	=	$(O_PAGESTRUCTURE) $(O_PAGELAYOUT)
 L_FIELDS		=	$(O_INPUTFIELDNAMES) $(O_READINPUTFIELDS)
-L_DETAILS		=	$(L_PAGELAYOUT) $(L_FIELDS) $(O_DETAILS)
+L_DETAILS		=	$(L_PAGELAYOUT) $(L_FIELDS) $(O_DETAILS) $(O_DATABASE)
 L_LOGIN         =   $(L_DETAILS) $(O_LOGIN)
 L_CLASSDETAILS	=	$(L_DETAILS) $(O_CLASSDETAILS)
 L_ROLLNODETAILS	=	$(L_DETAILS) $(O_ROLLNODETAILS)
