--- a/src/Makefile
+++ b/src/Makefile
@@ -45,7 +45,7 @@ H_INPUTFIELDNAMES   =   inputfieldname.h $(H_HEADER)
 H_READINPUTFIELDS   =   readinputfield.h $(H_HEADER) $(H_CGICC)
 H_FIELD             =   $(H_INPUTFIELDNAMES) $(H_READINPUTFIELDS)
 H_DETAILS           =   inputdetail.h $(H_PAGELAYOUT) $(H_FIELD)
-H_LOGIN             =   login.h $(DETAILS)
+H_LOGIN             =   login.h $(H_DETAILS)
 H_CLASSDETAILS      =   classdetail.h $(H_DETAILS)
 H_ROLNODETAILS      =   rollnodetail.h $(H_DETAILS)
 
@@ -102,7 +102,7 @@ O_CLASSINFO_MAIN    =   classinfo-main.o
 
 L_PAGELAYOUT	=	$(O_PAGESTRUCTURE) $(O_PAGELAYOUT)
 L_FIELDS		=	$(O_INPUTFIELDNAMES) $(O_READINPUTFIELDS)
-L_DETAILS		=	$(L_PAGELAYOUT) $(L_FIELDS) $(O_DETAILS) $(O_DATABASE)
+L_DETAILS		=	$(L_PAGELAYOUT) $(L_FIELDS) $(O_DATABASE) $(O_DETAILS)
 L_LOGIN         =   $(L_DETAILS) $(O_LOGIN)
 L_CLASSDETAILS	=	$(L_DETAILS) $(O_CLASSDETAILS)
 L_ROLLNODETAILS	=	$(L_DETAILS) $(O_ROLLNODETAILS)
@@ -182,10 +182,11 @@ $(E_JAVASCRIPT): $(L_JAVASCRIPT)
 	$(CC) $(OFLAG) $(E_JAVASCRIPT) $(L_JAVASCRIPT)
 
 $(E_LOGIN): $(L_LOGINPAGE)
-	$(CC) $(OFLAG) $(E_LOGIN) $(L_LOGINPAGE) $(LCGICC)
+	$(CC) $(OFLAG) $(E_LOGIN) $(L_LOGINPAGE) $(LCGICC) $(LMYSQL)
 
 $(E_TOTALCLASSES): $(L_TOTALCLASSES)
-	$(CC) $(OFLAG) $(E_TOTALCLASSES) $(L_TOTALCLASSES) $(LCGICC) $(LMYSQL)
+	$(CC) $(OFLAG) $(E_TOTALCLASSES) $(L_TOTALCLASSES) $(LCGICC) \
+	$(LMYSQL)
 
 $(E_CLASSINFO): $(L_CLASSINFO)
 	$(CC) $(OFLAG) $(E_CLASSINFO) $(L_CLASSINFO) $(LCGICC) $(LMYSQL)
